--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: lightgray;
+}
+
+h2 {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
 }
 
 #dealer-cards img {
@@ -13,4 +19,16 @@ body {
     height: 175px;
     width: 125px;
     margin: 1px;
+}
+
+#hit {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+}
+
+#stay {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
 }
